fix: gender icons doesn't wrap

--- a/src/components/room/topicArea.css
+++ b/src/components/room/topicArea.css
@@ -108,3 +108,8 @@
         text-indent: 0 !important;
     }
 }
+
+.gender-icons{
+    display: flex;
+    flex-direction: row;
+}
